cluster/homelab/apps/matrix/dendrite/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dendrite-matrix
  namespace: matrix
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.oplabs.us`) && PathPrefix(`/_synapse/admin`)
      kind: Rule
      services:
        - name: dendrite-matrix
          port: 8008
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: local-ip-list
          namespace: traefik
    # - match: Host(`matrix.oplabs.us`) && PathPrefix(`/_matrix`)
    #   kind: Rule
    #   services:
    #     - name: dendrite-matrix
    #       port: 8008
    #   middlewares:
    #     - name: default-headers
    #     - name: matrix-ip-list
    - match: Host(`matrix.oplabs.us`)
      kind: Rule
      services:
        - name: dendrite-matrix
          port: 8008
      middlewares:
        - name: default-headers
  tls:
    secretName: oplabs-us-tls
